<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_room_building_name_textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/add_room_building_name_textView"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/top_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/room_number_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/room_number_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/room_number_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/room_number_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/room_number_editText_hint"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/capacity_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/capacity_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/capacity_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/capacity_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/capacity_editText_hint"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/features_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <TextView
            android:id="@+id/features_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/features_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/features_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/features_editText_hint"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_room_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_new_room_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/add_new_room_button"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>