<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_building_textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/add_building_textView"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/top_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/building_name_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintBottom_toTopOf="@+id/building_code_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/building_name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/building_name_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/building_name_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/building_name_editText"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/building_code_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintBottom_toTopOf="@+id/address_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/building_code_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/building_code_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/building_code_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/building_code_editText"
            android:inputType="text"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/regular_button"
        app:layout_constraintBottom_toTopOf="@+id/add_building_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/address_textView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/address_editText"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/address_editText"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_building_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_new_building_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/add_new_building_button"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>