<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="651dp"
        tools:context=".ExploreActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <Button
        android:id="@+id/ils_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/top_button"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/ils_button"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/sutdy_rooms_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bottom_button"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/study_rooms_button"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/lecture_halls_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/top_button"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/lecture_halls_button"
        android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>