<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/admin_info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/regular_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/admin_info_textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:paddingLeft="30dp"
            android:text="@string/admin_info_textView"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179"/>

        <TextView
            android:id="@+id/text_buildings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:paddingLeft="30dp"
            android:text="@string/text_buildings"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_info_textView"
            app:layout_constraintTop_toEndOf="admin_info_textView" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/building_management_recyclerView"
        android:layout_width="409dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/building_management_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_info_linearLayout"
        app:layout_constraintVertical_bias="1" />

    <LinearLayout
        android:id="@+id/building_management_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/remove_building_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/top_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/remove_building_assignment_button"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/remove_admin_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/remove_admin_assignment_button"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/add_room_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/top_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/add_room_button"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/modify_room_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/modify_room_button"
            android:textAllCaps="false"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>